--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,7 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry exported="true" kind="src" path="/appcompat_v7"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/google-play-services_lib"/>
+	<classpathentry kind="lib" path="C:/Users/KHALID/git/BeRelevant/libs/ion-2.1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/KHALID/git/BeRelevant/libs/androidasync-2.1.3.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
